--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,24 +2,113 @@ header {
   position: fixed;
   left: 0;
   top: 0;
+  background: transparent;
+  transition: var(--t-200ms-linear);
   width: 100%;
-  height: 80px;
-  padding: 0 20px;
-  background: var(--header);
-  border-bottom: 1px solid var(--color-1);
+  height: auto;
+  padding: 10px;
+  z-index: 100;
 }
 
 .header {
-  margin: 0 auto;
+  margin: auto;
   width: 100%;
-  height: 100%;
-  max-width: var(--mx-w-content);
+  max-width: 2000px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 .header-logo {
-  font-weight: bold;
-  color: var(--color-1);
+  display: flex;
+}
+
+.header-logo img {
+  width: auto;
+  height: 60px;
+  object-fit: contain;
+}
+
+.header-nav {
+  display: flex;
+  width: auto;
+  height: 100%;
+}
+
+.header-nav-ul {
+  display: flex;
+  width: auto;
+  height: 100%;
+  /* gap: 10px; */
+}
+
+.header-nav-ul>li {
+  position: relative;
+  width: auto;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-nav-ul>li>a,
+.header-nav-ul>li>button {
+  width: auto;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10px;
+  border-radius: 4px;
+  transition: var(--all-200ms-linear);
+}
+
+.header-nav-ul>li>a h2,
+.header-nav-ul>li>a span,
+.header-nav-ul>li>button h2,
+.header-nav-ul>li>button span {
+  color: var(--white);
+}
+
+.header-nav-ul>li>a:hover,
+.header-nav-ul>li>button:hover {
+  background: var(--color-1);
+}
+
+.header-nav-ul>li ul {
+  position: absolute;
+  left: 0;
+  top: calc(100% + 5px);
+  width: 280px;
+  display: flex;
+  flex-direction: column;
+  background: orange;
+
+  opacity: 0;
+  pointer-events: none;
+  user-select: none;
+}
+
+.header-nav-ul>li:hover ul {
+  opacity: 1;
+  pointer-events: unset;
+  user-select: unset;
+}
+
+.header-nav-ul>li ul li a {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  width: 100%;
+  height: 40px;
+  padding: 0 10px;
+}
+
+.header-nav-ul>li ul li a:hover {
+  background: orangered;
+}
+
+.header-nav-ul>li ul li a p,
+.header-nav-ul>li ul li a span {
+  color: var(--text);
 }
