--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -39,7 +39,6 @@ header {
   display: flex;
   width: auto;
   height: 100%;
-  /* gap: 10px; */
 }
 
 .header-nav-ul>li {
@@ -54,13 +53,18 @@ header {
 .header-nav-ul>li>a,
 .header-nav-ul>li>button {
   width: auto;
-  height: 44px;
+  height: 38px;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 10px;
   border-radius: 4px;
-  transition: var(--all-200ms-linear);
+  transition: var(--t-200ms-linear);
+  gap: 5px;
+}
+
+.menu-sub-icon {
+  display: none !important;
 }
 
 .header-nav-ul>li>a h2,
@@ -82,7 +86,11 @@ header {
   width: 280px;
   display: flex;
   flex-direction: column;
-  background: orange;
+  background: var(--white);
+  box-shadow: 0 0 10px rgba(0 0 0 / 0.5);
+  transition: var(--t-200ms-linear);
+  overflow: hidden;
+  border-radius: 4px;
 
   opacity: 0;
   pointer-events: none;
@@ -99,16 +107,138 @@ header {
   display: flex;
   align-items: center;
   justify-content: left;
+  gap: 5px;
   width: 100%;
-  height: 40px;
+  height: 44px;
   padding: 0 10px;
+  transition: var(--t-200ms-linear);
 }
 
 .header-nav-ul>li ul li a:hover {
-  background: orangered;
+  background: var(--color-1);
 }
 
-.header-nav-ul>li ul li a p,
+.header-nav-ul>li ul li a h3,
 .header-nav-ul>li ul li a span {
+  transition: var(--t-200ms-linear);
   color: var(--text);
+}
+
+.header-nav-ul>li ul li a:hover h3,
+.header-nav-ul>li ul li a:hover span {
+  color: var(--white);
+}
+
+.menu-button-close {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .header-nav {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    padding-top: 68px;
+    background: var(--header);
+    display: flex;
+    z-index: 101;
+  }
+
+  .header-nav-ul {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .header-nav-ul>li {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .header-nav-ul>li>a,
+  .header-nav-ul>li>button {
+    width: 100%;
+    height: 44px;
+    justify-content: space-between;
+    border-radius: 0;
+  }
+
+  .header-nav-ul>li>a h2,
+  .header-nav-ul>li>a span,
+  .header-nav-ul>li>button h2,
+  .header-nav-ul>li>button span {
+    color: var(--text);
+  }
+
+  .menu-sub-icon {
+    display: unset !important;
+  }
+
+  .header-nav-ul>li>a h2,
+  .header-nav-ul>li>button h2 {
+    margin-right: auto;
+  }
+
+  .header-nav-ul>li>a:hover h2,
+  .header-nav-ul>li>a:hover span,
+  .header-nav-ul>li>button:hover h2,
+  .header-nav-ul>li>button:hover span {
+    color: var(--white);
+  }
+
+  .header-nav-ul>li ul {
+    position: relative;
+    left: unset;
+    top: unset;
+    width: 100%;
+    height: auto;
+    box-shadow: unset;
+    border-radius: 0;
+    padding-left: 39px;
+
+    opacity: unset;
+    pointer-events: unset;
+    user-select: unset;
+  }
+
+  .header-nav-ul>li ul::before {
+    content: '';
+    position: absolute;
+    left: 18.5px;
+    top: 50%;
+    translate: 0 -50%;
+    width: 2px;
+    height: calc(100% - 10px);
+    border-radius: 2px;
+    background: crimson;
+  }
+
+  .header-nav-ul>li ul li a {
+    padding: 0;
+  }
+
+  .header-nav-ul>li ul li a:hover {
+    background: none;
+  }
+
+  .header-nav-ul>li ul li a:hover h3,
+  .header-nav-ul>li ul li a:hover span {
+    color: var(--color-1) !important;
+  }
+
+  .menu-button-close {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    width: 48px;
+    height: auto;
+    border-radius: 100%;
+    aspect-ratio: 1/1;
+    background: orange;
+    z-index: 102;
+  }
 }
