--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,6 +17,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 10px;
 }
 
 .header-logo {
@@ -129,6 +130,7 @@ header {
   color: var(--white);
 }
 
+.menu-button-open,
 .menu-button-close {
   display: none;
 }
@@ -136,19 +138,49 @@ header {
 @media screen and (max-width: 600px) {
   .header-nav {
     position: fixed;
-    right: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
+    left: 50%;
+    top: -50px;
+    translate: -50% 0;
+    width: 100%;
+    height: 100px;
     padding-top: 68px;
     background: var(--header);
     display: flex;
+    transition: var(--t-200ms-linear);
+    /* transition: all 100ms linear; */
+    /* transition: all 1s linear; */
+    overflow: hidden;
+    opacity: 0;
+    pointer-events: none;
+    user-select: none;
     z-index: 101;
+    border-radius: 0 0 100% 100%;
+  }
+
+  .header-nav.active {
+    opacity: 1;
+    top: 0;
+    height: 100vh;
+    border-radius: 0;
+    pointer-events: unset;
+    user-select: unset;
+    pointer-events: unset;
   }
 
   .header-nav-ul {
     width: 100%;
     flex-direction: column;
+    transition: var(--t-200ms-linear);
+
+    opacity: 0;
+    pointer-events: none;
+    user-select: none;
+  }
+
+  .header-nav.active .header-nav-ul {
+    opacity: 1;
+    pointer-events: unset;
+    user-select: unset;
   }
 
   .header-nav-ul>li {
@@ -227,9 +259,24 @@ header {
     color: var(--color-1) !important;
   }
 
+  .header-call-button {
+    margin-left: auto;
+  }
+
+  .menu-button-open {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--white);
+    border-radius: 100%;
+    width: 48px;
+    height: auto;
+    aspect-ratio: 1/1;
+  }
+
   .menu-button-close {
     position: fixed;
-    top: 10px;
+    top: 16px;
     right: 10px;
     display: flex !important;
     align-items: center;
@@ -238,7 +285,23 @@ header {
     height: auto;
     border-radius: 100%;
     aspect-ratio: 1/1;
-    background: orange;
+    background: rgba(0 0 0 / 0.05);
+    transition: var(--t-200ms-linear);
     z-index: 102;
+
+    opacity: 0;
+    pointer-events: none;
+    user-select: none;
+  }
+
+  .menu-button-close.active {
+    opacity: 1;
+    pointer-events: unset;
+    user-select: unset;
+  }
+
+  .menu-button-open span,
+  .menu-button-close span {
+    color: var(--text);
   }
 }
