--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,11 +1,62 @@
+.homepage-video-bg {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+}
+
 .hero-container {
   display: flex;
   width: 100%;
   height: 100vh;
-  background: url('https://www.gruasememca.com/media/img/us-poster-video.webp');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  max-height: 1000px;
   position: relative;
+}
+
+.hero-container::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0 0 0 / 0.5);
+  z-index: -1;
+}
+
+.hero-content {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  margin: auto;
+  margin-top: 80px;
+  width: 100%;
+  max-width: var(--mx-w-content);
+  height: calc(100% - 80px);
+}
+
+.hero-content h1 {
+  text-align: center;
+  font-size: 46px;
+  color: var(--white);
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.hero-content p {
+  max-width: 500px;
+  text-align: center;
+  color: var(--white);
+}
+
+@media screen and (max-width: 600px) {
+  .hero-content h1 {
+    font-size: 38px;
+  }
 }
