--- a/src/pages/Home/components/Services/Services.css
+++ b/src/pages/Home/components/Services/Services.css
@@ -5,6 +5,7 @@
 }
 
 .homepage-services-buttons-container ul li button {
+  position: relative;
   width: auto;
   height: 48px;
   padding: 0 12px;
@@ -14,6 +15,49 @@
   transition: var(--t-200ms-linear);
 }
 
-.homepage-services-buttons-container ul li button:hover {
+.h-p-button::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: rgba(0 0 0 / 0.25);
+  transition: var(--t-200ms-linear);
+
+  opacity: 0;
+}
+
+.h-p-button:hover::before {
+  opacity: 1;
+}
+
+.h-p-button.active::before {
+  opacity: 1;
   background: var(--color-1);
+}
+
+.h-p-button p {
+  color: var(--text);
+  transition: var(--t-200ms-linear);
+}
+
+.h-p-button.active p,
+.h-p-button:hover p {
+  color: var(--color-1);
+}
+
+.h-p-button span {
+  display: none;
+}
+
+.homepage-services-target-1 img {
+  width: 200px;
+  height: auto;
+}
+
+.homepage-services-target-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
