--- a/src/pages/Home/components/Machinery/Machinery.css
+++ b/src/pages/Home/components/Machinery/Machinery.css
@@ -1,5 +1,7 @@
 .block-container.machinery {
+  overflow: hidden;
   position: relative;
+  height: 640px;
 }
 
 .block-container.machinery>img {
@@ -19,6 +21,136 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0 0 0 / 0.5);
+  background: rgba(0 0 0 / 0.75);
   z-index: -1;
+}
+
+.block-content.machinery {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.block-content.machinery img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  translate: -50% -50%;
+  rotate: 9deg;
+  width: 280px;
+  height: auto;
+  object-fit: contain;
+  pointer-events: none;
+  user-select: none;
+  z-index: 0;
+}
+
+.homepage-machinery-name {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  translate: -50% 0;
+  color: var(--white);
+  z-index: 1;
+}
+
+.homepage-machinery-name,
+.homepage-machinery-name span {
+  font-size: 80px;
+}
+
+.homepage-machinery-name span {
+  color: transparent;
+  -webkit-text-stroke: 2px var(--white);
+}
+
+.homepage-machinery-list {
+  position: absolute;
+  top: 50%;
+  translate: 0 -50%;
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  gap: 20px;
+}
+
+.homepage-machinery-list-1 {
+  left: 20px;
+}
+
+.homepage-machinery-list-2 {
+  right: 20px;
+}
+
+.homepage-machinery-list li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.homepage-machinery-list-2 li {
+  align-items: flex-end;
+}
+
+.homepage-machinery-list p {
+  color: var(--white);
+}
+
+.homepage-machinery-list li p:nth-child(1) {
+  font-size: 20px;
+}
+
+.homepage-machinery-list li p:nth-child(2) {
+  color: #D6D6D6;
+}
+
+.homepage-machinery-text {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  translate: -50% 0;
+  width: calc(100% - 40px);
+  max-width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  gap: 10px;
+  z-index: 2;
+}
+
+@media screen and (max-width: 600px) {
+  .block-container.machinery {
+    height: 740px;
+  }
+
+  .block-content.machinery img {
+    width: 250px;
+  }
+
+  .homepage-machinery-list {
+    gap: 40px;
+  }
+
+  .homepage-machinery-list-1 {
+    left: 0;
+  }
+
+  .homepage-machinery-list-2 {
+    top: calc(50% + 50px);
+    right: 0;
+  }
+
+  .homepage-machinery-text {
+    width: calc(100% - 20px);
+    max-width: unset;
+  }
 }
